--- a/courses/an20/exercises/ex08.tex
+++ b/courses/an20/exercises/ex08.tex
@@ -327,7 +327,7 @@ Normalenvektor ist $n = \pm \qty(\nabla f\qty(x_0))$.
     -2u & 2v
   \end{pmatrix}$
   \begin{flalign*}
-    \Rightarrow J_j (x, y) &= J_f(f(x, y)) \cdot J_f(x, y)
+    \Rightarrow J_l (x, y) &= J_g(f(x, y)) \cdot J_f(x, y)
     = J_g(x - y, x \cdot y) \cdot J_f(x, y) & \\
     &= \begin{pmatrix}
       2 (x - y) & 0 \\
