feat: 1c of 8th an20 homework

--- a/courses/an20/homework/ha08.tex
+++ b/courses/an20/homework/ha08.tex
@@ -60,6 +60,15 @@ Ermitteln Sie die zugehörige Jacobi-Matrix $J_f(x)$.
   \end{flalign*}
 
 \item $f(t) = e^t(\cos t, \sin t, 1)$
+  \subparagraph{Lösung:} $D(f) = \qty\big{t \in \mathbb{R}}$
+  \begin{flalign*}
+    J_f(t) &= e^t \cdot \begin{pmatrix}
+      \sin t + \cos t \\
+      \cos t - \sin t \\
+      1
+    \end{pmatrix} & \\
+    D(f') &= \qty\big{t \in \mathbb{R}}
+  \end{flalign*}
 \end{enumerate}
 
 \newpage
