--- a/courses/an20/homework/ha08.tex
+++ b/courses/an20/homework/ha08.tex
@@ -33,7 +33,7 @@
 \begin{document}
 \paragraph{Hausaufgabe 1} Geben Sie den größtmöglichen Definitionsbereich
 $D(f) \subseteq \mathbb{R}^N$ der folgenden Ausdrücke an.
-Auf welcher Teilmenge $D(f') \subseteq D(h)$ existieren die Ableitungen $f'$?
+Auf welcher Teilmenge $D(f') \subseteq D(f)$ existieren die Ableitungen $f'$?
 Ermitteln Sie die zugehörige Jacobi-Matrix $J_f(x)$.
 \begin{enumerate}[a)]
 \item $f(x_1, x_2) = \ln(2 - e^{x_1 - x_2})$
