--- a/courses/an20/homework/ha08.tex
+++ b/courses/an20/homework/ha08.tex
@@ -54,9 +54,9 @@ Ermitteln Sie die zugehörige Jacobi-Matrix $J_f(x)$.
     J_f(x) &= \begin{pmatrix}
       \frac{1}{x_1} & 0 & 0 \\
       \sqrt{x_2} & - \frac{x_1}{\sqrt{x_2}} & 0 \\
-      0 & 0 & - \frac{x_1}{\sqrt{x_1x_3}}
+      - \frac{x_3}{\sqrt{x_1x_3}} & 0 & - \frac{x_1}{\sqrt{x_1x_3}}
     \end{pmatrix} & \\
-    D(f,) &= \qty{(x_1, x_2, x_3) \in \mathbb{R}^2 {\Big |} x_1 \ne 0, x_2 > 0, x_1 \cdot x_3 \geq 0}
+    D(f,) &= \qty{(x_1, x_2, x_3) \in \mathbb{R}^2 {\Big |} x_1 , x_2 > 0, x_3 \geq 0}
   \end{flalign*}
 
 \item $f(t) = e^t(\cos t, \sin t, 1)$
