--- a/courses/an20/homework/ha08.tex
+++ b/courses/an20/homework/ha08.tex
@@ -18,7 +18,7 @@
 \pgfplotsset{compat = newest}
 \usepgfplotslibrary{fillbetween}
 
-\author{}
+\author{Albina Oscherowa \\ Lukas Kamratzki \\ Karsten Lehmann}
 \date{SoSe 2021}
 \title{Hausaufgabe 08 \\Analysis - Weiterführende Konzepte}
 
