--- a/courses/an20/homework/ha09.tex
+++ b/courses/an20/homework/ha09.tex
@@ -54,6 +54,42 @@ durch
     &= 2N - 4
   \end{flalign*}
   Die \textit{Laplace-Gleichung} ist erfüllt für $N = 2$.
+
+\item Ermitteln Sie für die Funktion
+  $f \colon \mathbb{R}^N \setminus \qty{0} \to \mathbb{R}, p \in \mathbb{Z}$,
+  definiert durch
+  \[
+    f(x) = f(x_1, \ldots, x_N) \coloneqq \norm{x}_2^p = \qty(x_1^2 + \ldots + x_N^2)^{\frac{p}{2}}, p \in \mathbb{Z}
+  \]
+  die partiellen Ableitungen
+  \colorbox{yellow}{$\frac{\partial}{\partial x_k}f(x)$} und
+  \colorbox{orange!60}{$\frac{\partial^2}{\partial x_j\partial x_k} f(x)$}
+  für $j, k = 1, \ldots, N$.
+  Berechnen Sie $\Delta f(x)$.
+  Was ergibt sich speziell für $p = 2 - N, N \geq 3$?
+  \subparagraph{Lösung:}
+  $g(x) = g\qty(x_1, \ldots, x_N) \coloneqq \qty(x_1^2 + \ldots + x_N^2)$,
+  $h(x) \coloneqq x^{\frac{p}{2}}$,
+  $f(x) = h(g(x))$
+  \begin{flalign*}
+    \colorbox{yellow}{$\frac{\partial}{\partial x_k}(x)$} &= h'(g(x)) \cdot g'(x) = h'(g(x)) \cdot g'(x) & \\
+    &= \frac{1}{2}p\qty(x_1^2 + \ldots + x_N)^{\frac{p}{2} - 1} \cdot 2 x_k \\
+    &= p x_k \qty(x_1^2 + \ldots + x_N)^{\frac{p}{2} - 1} \\
+    \colorbox{orange!60}{$\frac{\partial}{\partial x_j \partial x_k}(x)$}
+    &= (p - 2) \cdot p \cdot x_j \cdot x_k \cdot \qty(x_1^2 + \ldots x_N^2)^{\frac{p}{2} - 2} \\
+    \frac{\partial^2}{\partial x_k}(x)
+    &= p \cdot \qty(x_1^2 + \ldots x_N^2)^{\frac{p}{2} - 1} + p \cdot x_k^2
+  \end{flalign*}
+  \newpage
+  \begin{flalign*}
+    \Delta f(x) &= \sum_{k = 1}^N p \cdot \qty(x_1^2 + \ldots x_N^2)^{\frac{p}{2} - 1} + p \cdot x_k^2w & \\
+    &= p \cdot \sum_{k = 1}^N \qty(x_1^2 + \ldots x_N^2)^{\frac{p}{2} - 1} + x_k^2 \\
+    &= p \cdot \qty(x_1^2 + \ldots x_N^2)^{\frac{p}{2}}
+  \end{flalign*}
+  Sei nun $p = 2 - N, N \geq 3$.
+  \begin{flalign*}
+    \Delta f = - \frac{1}{N - 2 \cdot \qty(x_1^2 + \ldots x_N^2)^{\frac{N}{2} - 1}}
+  \end{flalign*}
 \end{enumerate}
 
 \end{document}
