--- a/courses/an20/homework/ha10.tex
+++ b/courses/an20/homework/ha10.tex
@@ -132,5 +132,41 @@ Untersuchen Sie für jeden der Fälle, ob
   \item $\varphi$ ist nach \hyperref[sec:1_a_4]{1 a) (4)} nicht kontrahierend,
     somit sind die Voraussetzungen für den Banchschen Fixpunktsatz nicht erfüllt.
   \end{enumerate}
+
+\item $\varphi$ einen Fixpunkt in $M$ besitzt.
+  Berechnen Sie diesen gegebenenfalls.
+
+  \subparagraph{Lösung:}
+
+  \begin{multicols}{2}
+    \begin{enumerate}[(1)]
+    \item Lösung durch Gleichsetzen: $x = \varphi(x)$
+      \begin{flalign*}
+        x &= x + \frac{1}{x} & \\
+        x^2 &= x^2 + 1 \\
+        0 &= 1
+      \end{flalign*}
+      $\Rightarrow \varphi$ besitzt keinen Fixpunkt.
+
+    \item Lösung durch Gleichsetzen: $x = \varphi(x)$
+      \begin{flalign*}
+        x &=  \frac{1}{3}\qty\big(x^2 + 2) & \\
+        3x &= x^2 + 2 \\
+        x_1 &= 2 \notin M, \: x_2 = 1 \in M
+      \end{flalign*}
+      $\Rightarrow \varphi$ besitzt mit $x = 1$ einen Fixpunkt in $M$
+
+    \item Lösung durch Gleichsetzen: $x = \varphi(x)$
+      \begin{flalign*}
+        x &= \frac{1}{3}\qty\big(4 - x^2) & \\
+        3x &= 4 - x^2 \\
+        x_1 &= 1 \in M, \; x_2 = -4 \notin M
+      \end{flalign*}
+      $\Rightarrow \varphi$ besitzt mit $x = 1$ einen Fixpunkt in $M$
+
+    \item Lösung durch Gleichsetzen: $x = \varphi(x)$
+      \\\\\\\\\\\\\\\\
+    \end{enumerate}
+  \end{multicols}
 \end{enumerate}
 \end{document}
